# resort-cv-tests

./: .gitignore  README.md  config.py  parking-monitor-prompt.md  parking_approach.html  parking_report.html  pyproject.toml  server.py
analysis/: annotate.py  compare.py  grab.py  line.py  motion.py  parking.py  realtime.py  tracker_gondola.yaml  weather.py
parking-monitor/: .gitignore  README.md  config.py  pyproject.toml
parking-monitor/monitor/: __init__.py  __main__.py  db.py  detect.py  grab.py  llm.py  pipeline.py  scheduler.py  web.py
static/: app.js  debug.html  index.html  style.css
